tests/lang/obr/types/fail/recursive-pointer.obr
MODULE RecursivePointer;
    TYPE X = POINTER TO X;
END RecursivePointer.
